chore: remove stomp and opentelementry
* chore: remove stomp

* chore: streamline infrastructure by removing OpenTelemetry and reducing memory

feat: implement VideoSeries management and associate Videos with VideoSeries, while cleaning up unused logstash and build configuration files.

chore: delete unuesd file,