@@ -2,8 +2,6 @@
 FROM maven:3.9.5-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 
-RUN wget https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar
-
 COPY pom.xml .
 RUN --mount=type=cache,target=/root/.m2 \
     mvn dependency:go-offline -B
@@ -18,10 +16,15 @@ WORKDIR /app
 
 RUN apk add --no-cache curl
 
-COPY --from=build /app/opentelemetry-javaagent.jar /app/opentelemetry-javaagent.jar
-
 COPY --from=build /app/target/novel-vippro-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8081
 
-ENTRYPOINT ["java", "-Xms256m", "-Xmx512m", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0","-XX:+UseZGC", "-XX:+ZGenerational", "-jar", "app.jar"]
+ENTRYPOINT ["java", \
+    "-Xms128m", \
+    "-Xmx256m", \
+    "-XX:+UseSerialGC", \
+    "-XX:+OptimizeStringConcat", \
+    "-XX:+UseContainerSupport", \
+    "-jar", \
+    "app.jar"]
